k8s/08-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pqrs-api-deployment
  namespace: pqrs-saas
  labels:
    app: pqrs-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pqrs-api
  template:
    metadata:
      labels:
        app: pqrs-api
    spec:
      containers:
        - name: api
          # 🐳 REEMPLAZAR EN EL SERVIDOR: Cambia 'tu-usuario-docker' por tu usuario de Docker Hub / ECR
          image: tu-usuario-docker/pqrs-saas-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
