k8s/09-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pqrs-api-service
  namespace: pqrs-saas
  labels:
    app: pqrs-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: pqrs-api
